--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,12 +39,18 @@ jobs:
           sed -i "s/{BRIDE_ACCOUNT}/${{ secrets.BRIDE_ACCOUNT }}/g" app.py
           sed -i "s/{BRIDE_ACCOUNT_BANK}/${{ secrets.BRIDE_ACCOUNT_BANK }}/g" app.py
           sed -i "s/{BRIDGE_PHONE}/${{ secrets.BRIDGE_PHONE }}/g" app.py
-          sed -i "s/{GROOM_PARENT_ACCOUNT_BANK}/${{ secrets.GROOM_PARENT_ACCOUNT_BANK }}/g" app.py
-          sed -i "s/{GROOM_PARENT_ACCOUNT_NAME}/${{ secrets.GROOM_PARENT_ACCOUNT_NAME }}/g" app.py
-          sed -i "s/{GROOM_PARENT_ACCOUNT}/${{ secrets.GROOM_PARENT_ACCOUNT }}/g" app.py
-          sed -i "s/{BRIDE_PARENT_ACCOUNT_BANK}/${{ secrets.BRIDE_PARENT_ACCOUNT_BANK }}/g" app.py
-          sed -i "s/{BRIDE_PARENT_ACCOUNT_NAME}/${{ secrets.BRIDE_PARENT_ACCOUNT_NAME }}/g" app.py
-          sed -i "s/{BRIDE_PARENT_ACCOUNT}/${{ secrets.BRIDE_PARENT_ACCOUNT }}/g" app.py
+          sed -i "s/{GROOM_FATHER_NAME}/${{ secrets.GROOM_FATHER_NAME }}/g" app.py
+          sed -i "s/{GROOM_FATHER_ACCOUNT_BANK}/${{ secrets.GROOM_FATHER_ACCOUNT_BANK }}/g" app.py
+          sed -i "s/{GROOM_FATHER_ACCOUNT}/${{ secrets.GROOM_FATHER_ACCOUNT }}/g" app.py
+          sed -i "s/{GROOM_MOTHER_NAME}/${{ secrets.GROOM_MOTHER_NAME }}/g" app.py
+          sed -i "s/{GROOM_MOTHER_ACCOUNT_BANK}/${{ secrets.GROOM_MOTHER_ACCOUNT_BANK }}/g" app.py
+          sed -i "s/{GROOM_MOTHER_ACCOUNT}/${{ secrets.GROOM_MOTHER_ACCOUNT }}/g" app.py
+          sed -i "s/{BRIDE_FATHER_NAME}/${{ secrets.BRIDE_FATHER_NAME }}/g" app.py
+          sed -i "s/{BRIDE_FATHER_ACCOUNT_BANK}/${{ secrets.BRIDE_FATHER_ACCOUNT_BANK }}/g" app.py
+          sed -i "s/{BRIDE_FATHER_ACCOUNT}/${{ secrets.BRIDE_FATHER_ACCOUNT }}/g" app.py
+          sed -i "s/{BRIDE_MOTHER_NAME}/${{ secrets.BRIDE_MOTHER_NAME }}/g" app.py
+          sed -i "s/{BRIDE_MOTHER_ACCOUNT_BANK}/${{ secrets.BRIDE_MOTHER_ACCOUNT_BANK }}/g" app.py
+          sed -i "s/{BRIDE_MOTHER_ACCOUNT}/${{ secrets.BRIDE_MOTHER_ACCOUNT }}/g" app.py
 
       - name: Freeze Flask App
         run: python freeze.py
